# chip8-rs

./: Cargo.toml  README.md  handsfree_install.sh  install.sh
core-emu/: Cargo.toml
core-emu/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: app.rs  args.rs  keyboard.rs  main.rs  sound.rs
emulator/: Cargo.toml
emulator/src/: constants.rs  cpu.rs  display.rs  emulator.rs  error.rs  input.rs  lib.rs  memory.rs
