[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chip8-emu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
emulator = { path = "../emulator" }
winit = "0.30.11"
pixels = "0.15.0"
rodio = "0.20.1"
log = "0.4.27"
pretty_env_logger = "0.5.0"
anyhow = "1.0.98"
miette = { version = "7.6.0", features = ["fancy"] }
